--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@tailwindcss/vite": "^4.1.8",
     "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-webcam": "^7.2.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
